--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Trenér plavání Praha, Brno, Ostrava a Online | ES</title>
-    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online"
+    <title>Trenér plavání Praha, Brno, Ostrava, Krnov a Online | ES</title>
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Krnov nebo Online"
           name="description">
 
     <meta property="og:locale" content="cs_CZ">
-    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava a Online">
+    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Krnov a Online">
     <meta property="og:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Krnov nebo Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
     <meta property="og:site_name" content="Element swimming">
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="@elementswimming">
     <meta name="twitter:title" content="Element swimming">
     <meta name="twitter:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Krnov nebo Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
@@ -102,7 +102,7 @@
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
             <p class="pre-title fw-bold">Do bazénu? Jedině s námi!</p>
-            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava a Online</h1>
+            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Krnov a Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</p>
             <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném
                 oboru</p>
@@ -202,8 +202,8 @@
             <br><br>
             Naši trenéři jsou špičkou ve svém oboru, a to díky jejich oddanosti a kvalifikaci. S námi nejde jen o
             trénink, ale také o předávání znalostí našim klientům. Jsme hrdí na to, že můžeme nabídnout naše plavecké
-            služby nejen v <span class="fw-bold">Praze, Brně</span> a <span class="fw-bold">Ostravě</span>,
-            ale také prostřednictvím tzv. <span class="fw-bold">Online coachingu</span>, abychom byli co nejvíce
+            služby nejen v <span class="fw-bold">Praze, Brně, Ostravě</span> a <span class="fw-bold">Krnově</span>,
+            ale také prostřednictvím <span class="fw-bold">Online coachingu</span>, abychom byli co nejvíce
             dostupní pro vás.
             <br><br>
             Rádi bychom vám pomohli dosáhnout vašich plaveckých cílů. Pro více informací o našich službách a cenách v
@@ -211,7 +211,7 @@
         </p>
     </div>
 
-    <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 pt-2">
+    <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 pt-2 justify-content-center">
         <div class="col">
             <button id="prague" type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/prague.webp');">
@@ -242,9 +242,24 @@
 
         <div class="col">
             <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </button>
+        </div>
+
+        <div class="col">
+            <button id="krnov" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#KrnovModal">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/krnov.webp');">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
+                        <h2
+                                class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start shadow-lg">Krnov</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                             </li>
@@ -500,9 +515,7 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2023 Element swimming | <a class="light-gray no-decoration"
-                                                                                     href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael
-            Sláma</a></p>
+        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2024 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
 
         <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
@@ -1046,6 +1059,151 @@
     </div>
 </div>
 
+<div class="modal fade" id="KrnovModal" tabindex="-1" aria-labelledby="KrnovModal"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content px-2">
+            <div class="modal-header text-center">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row row-cols-1 align-items-stretch pb-3">
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">649 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Lekce pro dvojice</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">699 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">Od 799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-green rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
+                    <span>
+                        **Ceník je platný od 01.02.2023
+                    </span>
+                    <span>
+                        **Pravidla pro lekce všeho druhu:
+                    </span>
+                    <ul>
+                        <li>
+                            Objednanou lekci lze zrušit nejpozději do 24 hodin před lekcí.
+                        </li>
+                        <li>
+                            V případě, že klient zruší trénink v den jeho konání
+                            uhradí klient storno poplatek v plné výši ceny lekce
+                        </li>
+                        <li>
+                            V případě, že je zrušení tréninku v daný den na naší straně,
+                            má klient příští trénink zdarma.
+                        </li>
+                    </ul>
+                    <span>**Podmínky využití voucheru:</span>
+                    <ul>
+                        <li>
+                            Voucher lze využít do 6 měsíců od data zakoupení.
+                        </li>
+                        <li>
+                            Nutné rezervovat termín tréninku předem, dle dostupnosti.
+                        </li>
+                        <li>
+                            Stornování musí být provedeno alespoň 24 hodin před plánovaným tréninkem.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="OnlineModal" tabindex="-1" aria-labelledby="OnlineModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
@@ -1182,6 +1340,7 @@
     Brno - https://pixabay.com/images/id-4902615/
     Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
     Online - Photo by Pixabay from Pexels
+    Krnov - https://www.infokrnov.cz
   
   Contact icons:
     https://fontawesome.com/
