Fix en canonical, remove google tag manager

--- a/index_en.html
+++ b/index_en.html
@@ -28,7 +28,7 @@
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
-    <link rel="canonical" href="https://www.elementswimming.cz/index.html"/>
+    <link rel="canonical" href="https://www.elementswimming.cz/index_en.html"/>
     <link rel="apple-touch-icon" href="static/images/icons/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -58,21 +58,6 @@
     <link href="static/css/heroes.css" rel="stylesheet"/>
     <link href="static/css/features.css" rel="stylesheet"/>
 
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WNFFPWD');</script>
-    <!-- End Google Tag Manager -->
 </head>
 <body>
 <!-- Header -->
