--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         Poptat trénink
                     </button>
                 </a>
-                <a href="#">
-                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white" data-bs-toggle="modal" data-bs-target="#VoucherModal">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfELEG7WsPrpvpi8lva-oFnCSRkzM-FgzUsqSNiRCOi6ggdrg/viewform">
+                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white">
                         Voucher
                     </button>
                 </a>
@@ -338,7 +338,7 @@
                                 srozumitelného a trpělivého vysvětlování i rozbor plaveckých videí či využití
                                 různorodých pomůcek. Další výhodou je rychlá a flexibilní domluva, která vždy
                                 umožňuje trénink i při nepravidelném školním rozvrhu."</p>
-                            <p class="text-muted ref-name">Bára K. 25</p>
+                            <p class="text-muted ref-name">Bára K.</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
@@ -376,7 +376,7 @@
                                 soustředit na tu konkrétní část pohybu, ve kterém dělám chybu.
                                 S Dominikem byla skvělá dohoda a nebyl problém si domluvit hodiny tak, abych
                                 stíhal svoje pracovní povinnosti. Obecně mi jeho přístup přišel super."</p>
-                            <p class="text-muted ref-name">Tadeáš V. 26</p>
+                            <p class="text-muted ref-name">Tadeáš V.</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
@@ -523,97 +523,6 @@
             <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">Více informací</a>.
         </div>
     </footer>
-</div>
-
-<!-- Event Modals -->
-<div class="modal fade" id="VoucherModal" tabindex="-1" aria-labelledby="VoucherModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content px-2">
-            <div class="modal-header text-center">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="row row-cols-1 align-items-stretch pb-3">
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Voucher</p>
-                                </div>
-                                <ul class="list-unstyled mt-auto pb-3">
-                                    <li>
-                                        <small>
-                                            Získejte exkluzivní dárek pro své blízké, který je víc než jen pouhým darem - darujte jim
-                                            zážitek a zdraví! S naším Voucherem pro Plavecký Trénink můžete nyní přinést radost,
-                                            energii a pohyb do života svých blízkých.
-                                        </small>
-                                    </li>
-                                    <li>
-                                        <small>Co zahrnuje Voucher:</small>
-                                        <ul>
-                                            <li>
-                                                <small>
-                                                    Vámi zvolený typ naší služby s profesionálním trenérem.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    Plavání pro začátečníky i pokročilé.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    Flexibilní termíny tréninků podle vašich potřeb.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    Skvělý způsob, jak zlepšit kondici, techniku plavání a sebevědomí ve vodě.
-                                                </small>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="pt-2">
-                                        <small>
-                                            Pro zakoupení Voucheru a další informace nás neváhejte kontaktovat.
-                                            Rádi vám pomůžeme udělat dárek, který potěší každého plavce a nadchne je pro zdravý životní styl.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white rounded-5 shadow-lg">
-                            <img src="static/images/main/voucher.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
-                                 title="Voucher" alt="Voucher">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
-                <div class="modal-title text-muted wh-100 px-3 small">
-                    **Podmínky využití:
-                    <ul>
-                        <li>
-                            Voucher lze využít do 6 měsíců od data zakoupení.
-                        </li>
-                        <li>
-                            Nutné rezervovat termín tréninku předem, dle dostupnosti.
-                        </li>
-                        <li>
-                            Stornování musí být provedeno alespoň 24 hodin před plánovaným tréninkem.
-                        </li>
-                        <li>
-                            Nabídněte svým blízkým dárek, který jim pomůže zlepšit zdraví, kondici a přinést do
-                            života nový plavecký zážitek. Získejte Voucher pro Plavecký Trénink a udělejte jejich
-                            narozeniny či Vánoce nezapomenutelnými!
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <!-- Services Modals  -->
