--- a/index_en.html
+++ b/index_en.html
@@ -97,8 +97,8 @@
                         Request a training session
                     </button>
                 </a>
-                <a href="#">
-                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white" data-bs-toggle="modal" data-bs-target="#VoucherModal">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfELEG7WsPrpvpi8lva-oFnCSRkzM-FgzUsqSNiRCOi6ggdrg/viewform">
+                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white">
                         Voucher
                     </button>
                 </a>
@@ -336,7 +336,7 @@
                                 swimming videos or the use of various aids helps to achieve better results.
                                 Another advantage is the quick and flexible arrangement, which always allows training
                                 even with irregular school schedules."</p>
-                            <p class="text-muted ref-name">Bára K. 25</p>
+                            <p class="text-muted ref-name">Bára K.</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
@@ -373,7 +373,7 @@
                                 me a lot to focus on the specific part of the stroke I was making a mistake in. Dominic was great to
                                 deal with, and it was no problem arranging the lessons so that I could keep up with my work commitments.
                                 In general, I found his approach great."</p>
-                            <p class="text-muted ref-name">Tadeáš V. 26</p>
+                            <p class="text-muted ref-name">Tadeáš V.</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
@@ -522,97 +522,6 @@
             <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">More information</a>.
         </div>
     </footer>
-</div>
-
-<!-- Event Modals -->
-<div class="modal fade" id="VoucherModal" tabindex="-1" aria-labelledby="VoucherModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content px-2">
-            <div class="modal-header text-center">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="row row-cols-1 align-items-stretch pb-3">
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Voucher</p>
-                                </div>
-                                <ul class="list-unstyled mt-auto pb-3">
-                                    <li>
-                                        <small>
-                                            Get an exclusive gift for your loved ones that is more than just a gift - give them
-                                            experience and health! With our Voucher for Swimming Training you can now bring joy,
-                                            energy and movement into the lives of your loved ones.
-                                        </small>
-                                    </li>
-                                    <li>
-                                        <small>What the Voucher includes:</small>
-                                        <ul>
-                                            <li>
-                                                <small>
-                                                    Your chosen type of our services with a professional trainer.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    Swimming for beginners and advanced.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    Flexible training dates to suit your needs.
-                                                </small>
-                                            </li>
-                                            <li>
-                                                <small>
-                                                    A great way to improve fitness, swimming technique and confidence in the water.
-                                                </small>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="pt-2">
-                                        <small>
-                                            To purchase a Voucher and for further information, please contact us.
-                                            We would be happy to help you make a gift that will delight any swimmer and get them excited about a healthy lifestyle.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white rounded-5 shadow-lg">
-                            <img src="static/images/main/voucher.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
-                                 title="Voucher" alt="Voucher">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
-                <div class="modal-title text-muted wh-100 px-3 small">
-                    **Podmínky využití:
-                    <ul>
-                        <li>
-                            The voucher can be used within 6 months from the date of purchase.
-                        </li>
-                        <li>
-                            It is necessary to book a training date in advance, subject to availability.
-                        </li>
-                        <li>
-                            Cancellation must be done at least 24 hours before the scheduled training session.
-                        </li>
-                        <li>
-                            Nabídněte svým blízkým dárek, který jim pomůže zlepšit zdraví, kondici a přinést do
-                            života nový plavecký zážitek. Získejte Voucher pro Plavecký Trénink a udělejte jejich
-                            narozeniny či Vánoce nezapomenutelnými!
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <!-- Services Modals  -->
