--- a/index_en.html
+++ b/index_en.html
@@ -93,12 +93,12 @@
             <p class="lead">A modern concept of the training process, based on current trends and supervised by university-educated professionals in the field</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-ylb1KfJQ963AjNXsysBp5Y0_qswA8yPwRxJX5amgg4WK2Q/viewform">
-                    <button type="button" class="btn bg-green btn-lg px-4 me-sm-3 text-white">
+                    <button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">
                         Request a training session
                     </button>
                 </a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfELEG7WsPrpvpi8lva-oFnCSRkzM-FgzUsqSNiRCOi6ggdrg/viewform">
-                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfLfclAv1OM4CsRTYzbgZAeyPfwVN6tqoxv_zp-c4CEIKZU3w/viewform">
+                    <button type="button" class="btn btn-lg bg-green px-4 me-sm-3 text-white">
                         Voucher
                     </button>
                 </a>
