--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                 oboru</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform">
-                    <button type="button" class="btn bg-green btn-lg px-4 me-sm-3 text-white">
+                    <button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">
                         Poptat trénink
                     </button>
                 </a>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfELEG7WsPrpvpi8lva-oFnCSRkzM-FgzUsqSNiRCOi6ggdrg/viewform">
-                    <button type="button" class="btn bg-voucher btn-lg px-4 me-sm-3 text-white">
+                    <button type="button" class="btn btn-lg bg-green px-4 me-sm-3 text-white">
                         Voucher
                     </button>
                 </a>
