--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
     <link href="static/css/heroes.css" rel="stylesheet"/>
     <link href="static/css/features.css" rel="stylesheet"/>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHLFVX1VLH">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BHLFVX1VLH');
+    </script>
+
 </head>
 <body>
 <!-- Header -->
